Fixed transition slamming shut on mobile. In POC branch only #88

--- a/prototypes/POC/off-canvas.css
+++ b/prototypes/POC/off-canvas.css
@@ -22,19 +22,37 @@
 	}
 
 	.off-canvas .global-nav {
-		position: absolute;
+		position: fixed;
 		top: 0;
 		height: 100%;
 		width: 100%;
 		z-index: 100;
 	}
 
+	.off-canvas .global-nav .nav-container {
+		height: inherit;
+		overflow-y: scroll;
+	}
+
+	.off-canvas .global-nav ul {
+		margin-left: 16%;
+	}
+
 	.off-canvas .page {
-		position: absolute;
+		position: fixed;
 		min-height: 100%;
-		top: 53px;
+		top: 48px;
 		width: 100%;
 		z-index: 300;
+	}
+
+	.off-canvas .gov-bar,
+	.off-canvas .site-bar,
+	.off-canvas .page {
+		transition: left 0.2s ease-in;
+		-moz-transition: left 0.2s ease-in; /* Firefox 4 */
+		-webkit-transition: left 0.2s ease-in; /* Safari and Chrome */
+		-o-transition: left 0.2s ease-in; /* Opera */
 	}
 
 	.off-canvas.active-gov-bar .site-bar {
@@ -52,18 +70,6 @@
 		-o-transition: left 0.2s ease-in; /* Opera */
 	}
 
-	.off-canvas.active-site-menu .global-nav {
-		position: fixed;
-	}
-
-	.off-canvas.active-site-menu .global-nav .nav-container {
-		height: inherit;
-		overflow-y: scroll;
-	}
-
-	.off-canvas.active-site-menu .global-nav ul {
-		margin-left: 16%;
-	}
 
 }
 
